src/menus/snapshots/stama__menus__job_overview__tests__collapsed_layout.snap
---
source: src/menus/job_overview.rs
assertion_line: 1203
expression: terminal.backend()
---
"                                         SLURM TASK MANAGER                                         "
"▶ Job:        424242         train_model   Running       12:34:56      gpu            2             "
"▶ 1. Job details  2. Log                                                                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
