src/menus/snapshots/stama__menus__job_overview__tests__empty_joblist.snap
---
source: src/menus/job_overview.rs
assertion_line: 1219
expression: terminal.backend()
---
"                                         SLURM TASK MANAGER                                         "
"╭▼ Job list: squeue -u user ─────────────────────────────────────────────────────────────────250 ms╮"
"│                                           No jobs found                                          │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"▶ 1. Job details  2. Log                                                                            "
