src/menus/snapshots/stama__menus__job_overview__tests__filtered_joblist.snap
---
source: src/menus/job_overview.rs
expression: terminal.backend()
---
"                                         SLURM TASK MANAGER                                         "
"╭▼ Job list: squeue -u user ─────────────────────────────────────────────────────────────────250 ms╮"
"│ID ▼             Name            Status           Time            Partition        Nodes          │"
"│424242           train_model     Running          12:34:56        gpu              2              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰ filter: train (1/3) ─────────────────────────────────────────────────────────────────────────────╯"
"▶ 1. Job details  2. Log                                                                            "
